--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,3 @@
-PORT=8000
-
-MONGO_URI=mongodb://localhost/inventry
-
-JWT_AUTH=
+MONGO_URI=mongodb+srv://user1:eCa1jC5qwnvYPjKd@cluster0.zbhv3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_AUTH=your_jwt_secret_key_here
+FRONTEND_URL=http://localhost:3000
