--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,22 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "private": true,
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "http-status": "^2.1.0",
-    "mongoose": "^8.12.0",
-    "morgan": "^1.10.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^6.14.1",
+    "mongoose": "^7.8.6",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^2.0.22"
   }
 }
